Use Java 9 collection factory methods