@@ -22,8 +22,6 @@ import java.io.PrintWriter;
 import java.io.UnsupportedEncodingException;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 
 import org.junit.jupiter.api.Test;
@@ -43,7 +41,7 @@ class TreePrinterTests {
 	private List<String> actual() {
 		try {
 			out.flush();
-			return Arrays.asList(stream.toString(charset.name()).split("\\R"));
+			return List.of(stream.toString(charset.name()).split("\\R"));
 		}
 		catch (UnsupportedEncodingException e) {
 			throw new AssertionError(charset.name() + " is an unsupported encoding?!", e);
@@ -53,7 +51,7 @@ class TreePrinterTests {
 	@Test
 	void emptyTree() {
 		new TreePrinter(out, Theme.UNICODE, true).print(new TreeNode("<root>"));
-		assertIterableEquals(Collections.singletonList("╷"), actual());
+		assertIterableEquals(List.of("╷"), actual());
 	}
 
 	@Test
@@ -65,7 +63,7 @@ class TreePrinterTests {
 		root.addChild(new TreeNode(identifier("e-3", "engine three")).setResult(aborted(null)));
 		new TreePrinter(out, Theme.UNICODE, true).print(root);
 		assertIterableEquals( //
-			Arrays.asList( //
+			List.of( //
 				"╷", //
 				"├─ engine zero ↷ none", //
 				"├─ engine one ✔", //
@@ -80,7 +78,7 @@ class TreePrinterTests {
 		var result = TestExecutionResult.failed(new NullPointerException());
 		var node = new TreeNode(identifier("NPE", "test()")).setResult(result);
 		new TreePrinter(out, Theme.ASCII, true).print(node);
-		assertLinesMatch(Arrays.asList(".", "+-- test() [X] java.lang.NullPointerException"), actual());
+		assertLinesMatch(List.of(".", "+-- test() [X] java.lang.NullPointerException"), actual());
 	}
 
 	@Test
