@@ -15,14 +15,11 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.Test;
 import org.junit.platform.commons.PreconditionViolationException;
-import org.junit.platform.engine.TestSource;
 
 /**
  * Unit tests for {@link CompositeTestSource}.
@@ -35,7 +32,7 @@ class CompositeTestSourceTests extends AbstractTestSourceTests {
 	Stream<CompositeTestSource> createSerializableInstances() {
 		var fileSource = FileSource.from(new File("sample.instance"));
 		var classSource = ClassSource.from(getClass());
-		List<TestSource> sources = new ArrayList<>(Arrays.asList(fileSource, classSource));
+		var sources = List.of(fileSource, classSource);
 		return Stream.of(CompositeTestSource.from(sources));
 	}
 
@@ -46,14 +43,14 @@ class CompositeTestSourceTests extends AbstractTestSourceTests {
 
 	@Test
 	void createCompositeTestSourceFromEmptyList() {
-		assertThrows(PreconditionViolationException.class, () -> CompositeTestSource.from(Collections.emptyList()));
+		assertThrows(PreconditionViolationException.class, () -> CompositeTestSource.from(List.of()));
 	}
 
 	@Test
 	void createCompositeTestSourceFromClassAndFileSources() {
 		var fileSource = FileSource.from(new File("example.test"));
 		var classSource = ClassSource.from(getClass());
-		List<TestSource> sources = new ArrayList<>(Arrays.asList(fileSource, classSource));
+		var sources = new ArrayList<>(List.of(fileSource, classSource));
 		var compositeTestSource = CompositeTestSource.from(sources);
 
 		assertThat(compositeTestSource.getSources().size()).isEqualTo(2);
@@ -69,8 +66,8 @@ class CompositeTestSourceTests extends AbstractTestSourceTests {
 
 	@Test
 	void equalsAndHashCode() {
-		List<TestSource> sources1 = Collections.singletonList(ClassSource.from(Number.class));
-		List<TestSource> sources2 = Collections.singletonList(ClassSource.from(String.class));
+		var sources1 = List.of(ClassSource.from(Number.class));
+		var sources2 = List.of(ClassSource.from(String.class));
 		assertEqualsAndHashCode(CompositeTestSource.from(sources1), CompositeTestSource.from(sources1),
 			CompositeTestSource.from(sources2));
 	}
